// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MlPopover JobDetail renders correctly against snapshot 1`] = `
<EuiFlexGroup
  alignItems="center"
  justifyContent="spaceBetween"
>
  <EuiFlexItem
    grow={false}
  >
    <EuiTitle
      size="xxs"
    >
      <h5>
        job.title
      </h5>
    </EuiTitle>
    <EuiText
      size="s"
    >
      job.description
    </EuiText>
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  >
    <EuiSwitch
      checked={false}
      data-test-subj="job-detail-switch"
      disabled={false}
      onChange={[Function]}
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`MlPopover JobDetailsHeader renders correctly against snapshot 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="s"
>
  <EuiFlexItem
    grow={false}
  >
    <EuiToolTip
      content="Running ML Jobs can be resource intensive. Ensure your cluster's ml nodes are adequately configured before starting the jobs below."
      delay="regular"
      position="left"
    >
      <EuiTitle
        size="xs"
      >
        <styled.h4>
          Job Details
        </styled.h4>
      </EuiTitle>
      <EuiIcon
        className="eui-alignTop"
        color="subdued"
        size="s"
        type="questionInCircle"
      />
    </EuiToolTip>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiHorizontalRule
      margin="m"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`MlPopover MlPopoverTitle renders correctly against snapshot 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="s"
>
  <EuiFlexItem
    grow={false}
  >
    <EuiIcon
      size="m"
      type="machineLearningApp"
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiTitle
      className="euiAccordionForm__title"
      size="s"
    >
      <h6>
        Machine Learning
      </h6>
    </EuiTitle>
  </EuiFlexItem>
</EuiFlexGroup>
`;
